# ShowCase

./: draw_char_rect.py  router_current_vs_paper_brief.md
.obsidian/: app.json  workspace.json
.obsidian/plugins/github-sync/: data.json
Attachment/: nvidia-prefill_router.drawio
distill_small_model/: .gitignore  README.md  pyproject.toml  requirements.txt
distill_small_model/configs/: distill_qwen_0.2b.yaml  eval_quality.yaml  eval_smoke.yaml  smoke_test.yaml
distill_small_model/data/: custom_prompts.example.jsonl  eval_prompts.example.jsonl  smoke_distill.jsonl  smoke_eval.jsonl
distill_small_model/scripts/: eval_quality.ps1  setup_env.ps1  smoke_test.ps1  train_distill.ps1
distill_small_model/src/distill_qwen/: config_utils.py  evaluate_quality.py  generate_distill_data.py  prompting.py  student.py  teacher_api.py  train_student.py
